# clinic-ai-edge

./: clinic-ai-edge.code-workspace
llm/: .gitignore  illness.ipynb  pyproject.toml
llm/datasets/: symbipredict_2022.csv
llm/products/: diseases.json  symbipredict_2022_cleaned.json
